print JVM runtime parameters